--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,9 +1,9 @@
 APIurl=https://api.privatbank.ua/p24api/pubinfo?json&exchange&coursid=5
-Recipients="sergej.kozak@privatbank.ua","sergeykozak777@gmail.com"
+Recipients=
 
 #info profile from
-from=javaapplication22@gmail.com
-passwordEmail=pumpkin133
+from=
+passwordEmail=
 username=javaapplication22@gmail.com
 urlDatabase=jdbc:postgresql://localhost:5432/postgres
 userDatabase=postgres
