--- a/src/config.properties
+++ b/src/config.properties
@@ -4,8 +4,8 @@ Recipients="sergej.kozak@privatbank.ua","sergeykozak777@gmail.com"
 
 #info profile from
 from=javaapplication22@gmail.com
-passwordEmail=pumpkin133
-username=javaapplication22@gmail.com
+passwordEmail=pump***
+username=javaapplication****@gmail.com
 urlDatabase=jdbc:postgresql://localhost:5432/postgres
 userDatabase=postgres
 passwordDatabase=pumpkin1
